<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corners"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    >
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/iv_trip_item_icon"
        android:src="@drawable/baseline_route_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:padding="10dp"
        app:tint="@color/buttonsText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trip_item_meet_location"
        android:text="@string/meet_location_PH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_trip_item_icon"
        app:layout_constraintBottom_toTopOf="@id/trip_item_destination"
        android:paddingStart="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trip_item_destination"
        android:text="@string/destination_PH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_item_meet_location"
        android:paddingStart="15dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trip_item_Date"
        android:text="@string/date_PH"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf = "@id/trip_item_time"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trip_item_time"
        android:text="@string/time_PH"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/trip_item_Date"
        app:layout_constraintBottom_toTopOf="@id/trip_item_meet_location"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:id="@+id/trip_item_passengers"
        android:gravity="center"
        android:text="@string/passengers_PH"
        app:layout_constraintEnd_toStartOf="@id/iv_trip_item_passengers_icon"
        app:layout_constraintBottom_toTopOf="@id/trip_item_time"
        android:layout_marginEnd="6dp"
        />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:id="@+id/iv_trip_item_passengers_icon"
        android:src="@drawable/baseline_people_alt_24"
        app:layout_constraintEnd_toEndOf="@id/trip_item_Date"
        app:layout_constraintTop_toTopOf="@id/trip_item_passengers"
        app:tint="@color/buttonsText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/trip_item_roundTrip"
        android:text="@string/round_tripPH"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trip_item_destination"
        app:layout_constraintBottom_toBottomOf = "parent"
        android:paddingStart="15dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>