<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTripActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp"
                android:padding="20dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/addTripPage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="1dp"
                    android:paddingBottom="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/rounded_corners"
                    android:layout_marginBottom="100dp"
                    >
                    <TextView
                        android:id="@+id/addTripPageTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:padding="10dp"
                        android:paddingStart="35dp"
                        android:text="@string/tv_add_trip_title"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/addTripPageTopDivider"
                        android:layout_width="match_parent"
                        android:layout_height="5px"
                        app:layout_constraintTop_toBottomOf="@id/addTripPageTitle"
                        app:layout_constraintStart_toStartOf="@id/addTripPage"
                        app:layout_constraintEnd_toEndOf="@id/addTripPage" />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tripPickupLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_trip_pickup_location_hint"
                        android:ems="10"
                        android:inputType="text"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@id/addTripPageTopDivider"
                        />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tripDestination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_trip_destination_hint"
                        android:ems="10"
                        android:inputType="text"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@id/tripPickupLocation"
                        />

                    <TextView
                        android:id="@+id/tripDateTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:paddingTop="10dp"
                        android:paddingStart="35dp"
                        android:paddingBottom="0dp"
                        android:text="@string/add_trip_date_and_time_title"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tripDestination"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                    <Button
                        android:id="@+id/btnDatePicker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/buttonsText"
                        android:backgroundTint="@color/accent"
                        android:text="@string/add_trip_select_date_button_text"
                        app:layout_constraintTop_toBottomOf="@id/tripDateTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                    <Button
                        android:id="@+id/btnTimePicker"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:textColor="@color/buttonsText"
                        android:backgroundTint="@color/accent"
                        android:text="@string/add_trip_select_time_hh_mm_button_text"
                        app:layout_constraintTop_toBottomOf="@id/btnDatePicker"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                    <TextView
                        android:id="@+id/tripPassengerTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:padding="10dp"
                        android:paddingStart="35dp"
                        android:text="@string/add_trip_number_of_passengers_title"
                        android:textSize="19sp"
                        app:layout_constraintTop_toBottomOf="@id/btnTimePicker"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                    <RadioGroup
                        android:id="@+id/rgPassengers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        app:layout_constraintTop_toBottomOf="@id/tripPassengerTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        >
                        <RadioButton
                            android:id="@+id/rb1Passenger"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/add_trip_passengers_rb_1"
                            android:checked="true"
                            >
                        </RadioButton>
                        <RadioButton
                            android:id="@+id/rb2Passengers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/add_trip_passengers_rb_2"
                            >
                        </RadioButton>
                        <RadioButton
                            android:id="@+id/rb3Passengers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/add_trip_passengers_rb_3"
                            >
                        </RadioButton>
                    </RadioGroup>
                    <Switch
                        android:id="@+id/sRoundTrip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/rgPassengers"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:padding="10dp"
                        android:textSize="19sp"
                        android:text="@string/add_trip_round_trip_switch_title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/scheduleNewTripButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            app:tint="@color/buttonsText"
            android:backgroundTint="@color/accent"
            android:src="@drawable/baseline_send_24">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancelTripButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            app:tint="@color/buttonsText"
            android:backgroundTint="@color/accent"
            android:src="@drawable/baseline_cancel_24">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>