<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".editProfileActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp"
                android:padding="20dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/editProfilePage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="1dp"
                    android:paddingBottom="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/rounded_corners"
                    android:layout_marginBottom="100dp"
                    >
                    <TextView
                        android:id="@+id/editProfilePageTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:padding="10dp"
                        android:paddingStart="35dp"
                        android:text="@string/editProfileFormTitle"
                        android:textSize="20sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/editProfilePageTopDivider"
                        android:layout_width="match_parent"
                        android:layout_height="5px"
                        app:layout_constraintTop_toBottomOf="@id/editProfilePageTitle"
                        app:layout_constraintStart_toStartOf="@id/editProfilePage"
                        app:layout_constraintEnd_toEndOf="@id/editProfilePage"
                        />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_profile_first_name_hint"
                        android:ems="10"
                        android:inputType="text"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@id/editProfilePageTopDivider"
                        />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_profile_last_name_hint"
                        android:ems="10"
                        android:inputType="text"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@id/editFirstName"
                        />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editBirthdate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_profile_birthdate_hint"
                        android:ems="10"
                        android:inputType="date"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@id/editLastName"
                        />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_profile_phone_number_hint"
                        android:ems="10"
                        android:inputType="phone"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@id/editBirthdate"
                        />
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_profile_email_address_hint"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:layout_margin="20dp"
                        app:layout_constraintTop_toBottomOf="@id/editPhoneNumber"
                        />
                    <Switch
                        android:id="@+id/sPremiumUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/editEmail"
                        android:paddingStart="30dp"
                        android:paddingEnd="30dp"
                        android:padding="10dp"
                        android:textSize="19sp"
                        android:text="@string/premium_user" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            app:tint="@color/buttonsText"
            android:backgroundTint="@color/accent"
            android:src="@drawable/baseline_save_24"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cancelProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_cancel_24"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="40dp"
            app:tint="@color/buttonsText"
            android:backgroundTint="@color/accent"
            >
        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>